[project]
name = "cash-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.3",
    "selenium>=4.28.1",
]

[dependency-groups]
dev = [
    "ruff>=0.9.6",
]

[tool.ruff.lint]
select = [
    "A",
    "B",
    "E",
    "F",
    "I",
    "ISC",
    "ICN",
    "W",
]
